--- a/client/src/components/SearchPreview/SearchPreview.css
+++ b/client/src/components/SearchPreview/SearchPreview.css
@@ -1,5 +1,5 @@
 .searchPreviewDiv {
-    z-index: 2000;
+    z-index: 5;
     border-radius: 0 0 3px 3px;
     background-color: #E0E0E0;
 }
